--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,27 @@ __pycache__/
 
 # C extensions
 *.so
+*.egg
+*.egg-info
+*.pyc
+*$py.class
+*~
+.coverage
+coverage.xml
+build/
+dist/
+.tox/
+nosetests.xml
+env*/
+tmp/
+Data.fs*
+*.sublime-project
+*.sublime-workspace
+.*.sw?
+.sw?
+.DS_Store
+coverage
+test
 
 # Distribution / packaging
 .Python
