--- a/development.ini
+++ b/development.ini
@@ -54,7 +54,7 @@ handlers =
 qualname = interstate_sales
 
 [logger_sqlalchemy]
-level = INFO
+# level = INFO
 handlers =
 qualname = sqlalchemy.engine
 # "level = INFO" logs SQL queries.
