--- a/production.ini
+++ b/production.ini
@@ -56,7 +56,7 @@ handlers =
 qualname = interstate_sales
 
 [logger_sqlalchemy]
-level = WARN
+# level = WARN
 handlers =
 qualname = sqlalchemy.engine
 # "level = INFO" logs SQL queries.
