--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ pyramid-ipython==0.2
 pyramid-jinja2==2.7
 pyramid-mako==1.0.2
 pyramid-retry==0.5
+pyramid-storage==0.1.2
 pyramid-tm==2.2
 pytest==3.5.0
 pytest-cov==2.5.1
