--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,7 @@ pytest==3.5.0
 pytest-cov==2.5.1
 python-dateutil==2.7.2
 repoze.lru==0.7
-requests==2.18.4
+requests>=2.20.0
 simplegeneric==0.8.1
 six==1.11.0
 SQLAlchemy==1.2.6
