--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,7 @@ SQLAlchemy==1.2.6
 traitlets==4.3.2
 transaction==2.2.1
 translationstring==1.3
-urllib3==1.22
+urllib3>=1.23
 venusian==1.1.0
 waitress==1.1.0
 wcwidth==0.1.7
