--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ jedi==0.11.1
 Jinja2>=2.10.1
 jinja2-time==0.2.0
 Mako==1.0.7
-MarkupSafe==1.1.1
+MarkupSafe>=2.0
 more-itertools==4.1.0
 parso==0.1.1
 PasteDeploy==1.5.2
