--- a/requirements.txt
+++ b/requirements.txt
@@ -48,13 +48,13 @@ repoze.lru==0.7
 requests>=2.20.0
 simplegeneric==0.8.1
 six==1.11.0
-SQLAlchemy>=1.3.0
+SQLAlchemy==1.2.6
 traitlets==4.3.2
 transaction==2.2.1
 translationstring==1.3
 urllib3>=1.23
 venusian==1.1.0
-waitress>=1.4.1
+waitress==1.1.0
 wcwidth==0.1.7
 WebOb==1.8.0rc1
 WebTest==2.0.29
